--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+jupyter
 opencv-python == 4.10.0.82
 imagehash == 4.3.1
 Pillow == 9.3.0
 tqdm == 4.65.2
 rembg == 2.0.57
 pandas == 1.5.1
+numpy == 1.26.4
+dlib == 19.24.4
+regex == 2022.10.31
