--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ opencv-python == 4.10.0.82
 imagehash == 4.3.1
 Pillow == 9.3.0
 tqdm == 4.65.2
-rembg == 2.0.57
 pandas == 1.5.1
 numpy == 1.26.4
 dlib == 19.24.4
 regex == 2022.10.31
+rembg[gpu]
+# rembg == 2.0.57
+onnxruntime-gpu == 1.18.0
